# prosperon

./: .clang-format  .gitignore  .gitmodules  .prettierignore  .prettierrc  Info.plist  LICENSE  Makefile  README  README.md  config.js  emscripten.cross  globcore.sh  meson.build  meson.options  mingw32.cross  mkdocs.yml  readme.md  requirements.txt  resource.manifest  resource.rc  shell.html
acme/: cdef
assets/fonts/: dos.font
doc/: Makefile  mkdocs.yml  prosperon.org  requirements.txt  style.css
doc/docs/: index.md
docs/: 2d.md  3d.md  building.md  editor.adoc  editor.md  entities.md  export.md  game.adoc  game.md  gameobject.md  gui.md  index.md  input.md  particles.md  primum.md  scene.md  scripting.md  sound.md  style.css  video.adoc  video.md  warp.md  window.md
docs/api/: Cmdline.md  Color.md  ColorMap.md  Ease.md  Event.md  Gizmos.md  Mum.md  Register.md  Resources.md  Spline.md  SpriteAnim.md  Vector.md  actor.md  ai.md  allsprites.md  app.md  audio.md  bbox.md  component.md  console.md  convert.md  debug.md  dspsound.md  eachobj.md  editor.md  entity.md  entityreport.md  esc.md  fps.md  game.md  gen_notify.md  gui.md  input.md  inputpanel.md  io.md  joint.md  json.md  listpanel.md  mum.md  nota.md  (+25 more)
docs/engine_tour/: actors.md  editor.md  exporting.md  gui.md  index.md  input.md  physics.md  profiling.md  resources.md  scripting.md
docs/getting_started/: index.md
docs/guides/: index.md
editor/: game.rb
hlsl/: sprite.vert.hlsl
quickjs/: Makefile  qjs.c  quickjs.c  quickjs.h
scripts/: achievements.js  actor.js  ai.js  base.js  camera2d.js  camera2d.jso  color.js  components.js  debug.js  diff.js  editor.js  engine.js  entity.js  geometry.js  gui.js  input.js  layout.js  mum.js  nogame.js  parseq.js  particle.js  physics.js  play.js  profile.js  prosperon.js  render.js  repl.js  sdl_gpu.js  sound.js  spline.js  sprite.jso  std.js  stdprofile.js  stdtest.js  test.js  textedit.js  tween.js  widget.js
shaders/: 9slice.cg  animspritefrag.glsl  base.cg  baseparticle.cg  basetext.cg  billboardvertex.glsl  btdebugvert.glsl  circle.cg  circlefrag.glsl  common.hlsl  compile.sh  debugcolorfrag.glsl  gridvert.glsl  linefrag.glsl  mask.cg  model.frag.hlsl  model.vert.hlsl  model_lit.frag.hlsl  modelfrag.glsl  modelvert.glsl  outline.glsl  outlinevert.glsl  poly.cg  poly_ssbo.cg  postbase.cg  postsharpen.cg  screenfill.cg  simplepost.cg  simplevert.glsl  skyvert.glsl  sprite.cg  sprite.frag.hlsl  sprite.vert.hlsl  sprite_ssbo.cg  spritefrag.glsl  stdvert.cg  text_base.cg  videofrag.glsl  videovert.glsl  wind.hlsl
source/: 3pfollow.h  HandmadeMath.c  HandmadeMath.h  anim.c  anim.h  cbuf.h  config.c  config.h  cute_aseprite.h  cv.cpp  cv.hpp  datastream.c  datastream.h  font.c  font.h  gameobject.h  glad.c  glad.h  input.c  jsffi.c  jsffi.h  log.c  model.c  model.h  qjs_imgui.cpp  qjs_macros.h  qjs_tracy.c  render.c  render.h  render_trace.cpp  resources.c  resources.h  script.c  script.h  simplex.h  spline.c  texture.c  texture.h  timer.c  timer.h  (+8 more)
source/editor/: debug.c  debug.h  debugdraw.h  editor.c  editor.cpp  editor.h  editorstate.c  editorstate.h
source/editor/Nuklear/: nuklear.h
source/editor/Nuklear/demo/glfw_opengl3/: main.c  nuklear_glfw_gl3.h
source/editor/imgui/backends/: imgui_impl_sdl.cpp
source/engine/: 2dcamera.h  2dphysics.c  2dphysics.h  3dphysics.c  3dphysics.h  3pfollow.c  HandmadeMath.c  HandmadeMath.h  HandmadeMath.h.bak  anim.c  anim.h  billboard.h  camera.c  camera.h  cbuf.h  circbuf.c  circbuf.h  clay.h  config.c  config.h  datastream.c  datastream.h  debugdraw.c  dsp.c  dsp.h  ed_project.c  ed_project.h  editor.c  editor.h  editorstate.c  engine.c  engine.h  ffi.c  ffi.h  font.c  font.h  freelist.h  gameobject.c  gameobject.h  gif_load.h  (+96 more)
source/engine/3d/: 3dphysics.h  3pfollow.c  3pfollow.h  light.c  light.h  mesh.c  mesh.h  model.c  model.h  skybox.c  skybox.h  static_actor.c
source/engine/debug/: debug.c  debug.h  debugdraw.c  debugdraw.h  log.c  log.h
source/engine/editor/: ed_project.c  ed_project.h  editor.c  editor.h  editorstate.h
source/engine/glad/: gl.c  gl.h
source/engine/sound/: dsp.c  dsp.h  iir.c  iir.h  mix.c  mix.h  music.c  music.h  smbPitchShift.h  sound.c  sound.h
source/portaudio/cmake_support/: template_portaudio.def
source/scripts/: base.js  components.js  debug.js  diff.js  editor.js  engine.js  engine.rb  engine.scm  entity.js  gui.js  input.js  level.js  nogame.js  physics.js  play.js  sound.js  std.js  textedit.js
source/shaders/: 9slice.sglsl  animspritefrag.glsl  animspritevert.glsl  bezier.sglsl  billboardfrag.glsl  box.glsl  box.sglsl  btdebugfrag.glsl  circle.sglsl  circlefrag.glsl  circlevert.glsl  crt.sglsl  crtfrag.glsl  debugdepthfrag.glsl  diffuse.sglsl  diffuse_f.glsl  diffuse_v.glsl  grid.sglsl  grid3d.sglsl  gridfrag.glsl  gridvert.glsl  line.sglsl  linefrag.glsl  linevert.glsl  mpeg2.sglsl  particle.sglsl  point.sglsl  point_f.glsl  point_v.glsl  poly.sglsl  poly_f.glsl  poly_v.glsl  postfrag.glsl  shadow.sglsl  shadowfrag.glsl  slice9_f.glsl  slice9_v.glsl  sprite.sglsl  spritefrag.glsl  spritevert.glsl  (+8 more)
source/shaders/3d/: albedofrag.glsl  fragment.glsl  gizmofrag.glsl  gizmovert.glsl
subprojects/: chipmunk.wrap  qjs-chipmunk2d.wrap  qjs-dmon.wrap  qjs-enet.wrap  qjs-layout.wrap  qjs-miniz.wrap  qjs-nota.wrap  qjs-soloud.wrap  qjs-steam.wrap  quickjs.wrap  soloud.wrap  tracy.wrap
tests/: bind_v_call.js  bind_v_fn.js
tools/: cdb.c  jso.c  packer.c
